tests/snapshots/apostrophe_snapshots__apostrophe_identifiers.snap
---
source: tests/apostrophe_snapshots.rs
assertion_line: 50
expression: report
---
const_with_apostrophe:
  ok

axiom_with_apostrophe:
  ok

type_const_with_apostrophe:
  ok

const_starting_with_apostrophe:
  error
    error chain:
      - parse error
      - parse error: expected identifier at 2:7
    
    const 'x : Prop
          ^
